--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,23 @@
-@use 'mixins';
-@use 'reset';
-@use 'variables';
+@use 'mixins' as *;
+@use 'reset' as * ;
+@use 'variables' as *;
 
 
+body{
+    background-color:$background__page;
+    margin: 40em;
+    display: flexbox;
+    justify-content: center;
+    
+    h1{
+        background-color: $background__table;
+        width: 40em;
+        height: 10em;
+        display: flexbox;
+        justify-content: center;
+        border-radius: 5%
+        font-family;$font-family:$font-family;
+        font-weight:$font__type__tittle;
+        color:$font__color__tittle;
+    }
+}
